Finished. TODO: Norm, Checks

--- a/Project/Makefile
+++ b/Project/Makefile
@@ -6,7 +6,7 @@
 #    By: smoraes- <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/02/01 23:15:51 by smoraes-          #+#    #+#              #
-#    Updated: 2024/03/07 14:00:15 by smoraes-         ###   ########.fr        #
+#    Updated: 2024/03/08 03:36:47 by smoraes-         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,11 +14,10 @@ CC	= cc
 NAME	= libftprintf.a
 ARCS	= ar crs
 CFLAGS	= -Wall -Werror -Wextra
-SRCS	= ft_printf.c
+SRCS	= ft_printf.c ft_putchar.c ft_putnbr.c ft_putstr.c ft_puthex_frmt.c\
+				ft_put_uint.c ft_puthex_frmt_mayus.c
 OBJS	= $(SRCS:.c=.o)
-MAIN	= ../Main/main.c
 RM	= rm -rf
-BIN	= ../printf
 
 all: $(NAME)
 
@@ -28,12 +27,6 @@ $(NAME): $(OBJS)
 %.o:%.c ft_printf.h Makefile
 	$(CC) $(CFLAGS) -c $< -o $@
 
-bin: $(OBJS) $(NAME) $(MSRC) $(MOBJ)
-	$(CC) $(CFLAGS) $(MAIN) $(NAME) $(LIBA) -o $(BIN)
-
-dbg: all
-	$(CC) -g $(SRCS) $(LIBA)
-
 clean:
 	$(RM) $(OBJS)
 
@@ -42,4 +35,4 @@ fclean: clean
 
 re: fclean all
 
-.PHONY: all clean fclean re dbg
+.PHONY: all clean fclean re
